// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PasswordAnd2FA /> render() should render with or without 2FA section based on account access to the feature 1`] = `
<div
  class="full-width"
>
  <div
    class="page-header pageHeader"
  >
    <h1
      class="d-flex align-items-center"
    >
      Password & 2FA
    </h1>
  </div>
  <div
    class="pageContainer container-fluid"
  >
    <div
      class="contentWrapper"
    >
      <div
        class="heading-subsection-semibold inputField"
      >
        Update password
      </div>
      <div
        class="body-regular inputField"
      >
        Enter your current password to confirm your identity, then the new password you would like to set instead.
      </div>
      <form
        class=""
      >
        <div
          class="inputField"
        >
          <label
            class="label label"
            for="old_password"
          >
            Current password
            <abbr
              aria-label="required"
              class="abbr"
              title="required"
            >
              *
            </abbr>
          </label>
          <div
            class="wrapper"
          >
            <input
              class="input"
              id="old_password"
              name="old_password"
              placeholder="Current password"
              required=""
              type="password"
              value=""
            />
          </div>
        </div>
        <div
          class="inputField"
        >
          <label
            class="label label"
            for="new_password"
          >
            New password
            <abbr
              aria-label="required"
              class="abbr"
              title="required"
            >
              *
            </abbr>
          </label>
          <div
            class="wrapper"
          >
            <input
              class="input"
              id="new_password"
              name="new_password"
              pattern="^(?=.*?[A-Z])(?=.*?[a-z])(?=.*?[0-9]).{14,128}$"
              placeholder="New password"
              required=""
              title="Password must be between 14 and 128 characters long and contain at least 1 lower case letter, 1 upper case letter and 1 digit."
              type="password"
              value=""
            />
          </div>
        </div>
        <div
          class="inputField"
        >
          <label
            class="label label"
            for="confirm_new_password"
          >
            Confirm new password
            <abbr
              aria-label="required"
              class="abbr"
              title="required"
            >
              *
            </abbr>
          </label>
          <div
            class="wrapper"
          >
            <input
              class="input"
              id="confirm_new_password"
              name="confirm_new_password"
              pattern="^(?=.*?[A-Z])(?=.*?[a-z])(?=.*?[0-9]).{14,128}$"
              placeholder="Confirm new password"
              required=""
              title="Password must be between 14 and 128 characters long and contain at least 1 lower case letter, 1 upper case letter and 1 digit."
              type="password"
              value=""
            />
          </div>
        </div>
        <button
          class="wrapper updatePasswordButton primary medium"
          type="submit"
        >
          Update Password
        </button>
      </form>
      <div
        class="heading-subsection-semibold mb16"
      >
        Two-Factor Authentication (2FA)
        <div
          class="badge ml-3 "
        >
          Disabled
        </div>
      </div>
      <div
        class="body-regular mb16"
      >
        For an added layer of security, your admin requires you to use two-factor authentication (2FA) when you sign in to Gorgias.
      </div>
      <button
        class="wrapper mr-2 primary medium"
        type="button"
      >
        Enable 2FA
      </button>
    </div>
  </div>
</div>
`;

exports[`<PasswordAnd2FA /> render() should render with or without 2FA section based on account access to the feature 2`] = `
<div
  class="full-width"
>
  <div
    class="page-header pageHeader"
  >
    <h1
      class="d-flex align-items-center"
    >
      Change password
    </h1>
  </div>
  <div
    class="pageContainer container-fluid"
  >
    <div
      class="contentWrapper"
    >
      <div
        class="heading-subsection-semibold inputField"
      >
        Update password
      </div>
      <div
        class="body-regular inputField"
      >
        Enter your current password to confirm your identity, then the new password you would like to set instead.
      </div>
      <form
        class=""
      >
        <div
          class="inputField"
        >
          <label
            class="label label"
            for="old_password"
          >
            Current password
            <abbr
              aria-label="required"
              class="abbr"
              title="required"
            >
              *
            </abbr>
          </label>
          <div
            class="wrapper"
          >
            <input
              class="input"
              id="old_password"
              name="old_password"
              placeholder="Current password"
              required=""
              type="password"
              value=""
            />
          </div>
        </div>
        <div
          class="inputField"
        >
          <label
            class="label label"
            for="new_password"
          >
            New password
            <abbr
              aria-label="required"
              class="abbr"
              title="required"
            >
              *
            </abbr>
          </label>
          <div
            class="wrapper"
          >
            <input
              class="input"
              id="new_password"
              name="new_password"
              pattern="^(?=.*?[A-Z])(?=.*?[a-z])(?=.*?[0-9]).{14,128}$"
              placeholder="New password"
              required=""
              title="Password must be between 14 and 128 characters long and contain at least 1 lower case letter, 1 upper case letter and 1 digit."
              type="password"
              value=""
            />
          </div>
        </div>
        <div
          class="inputField"
        >
          <label
            class="label label"
            for="confirm_new_password"
          >
            Confirm new password
            <abbr
              aria-label="required"
              class="abbr"
              title="required"
            >
              *
            </abbr>
          </label>
          <div
            class="wrapper"
          >
            <input
              class="input"
              id="confirm_new_password"
              name="confirm_new_password"
              pattern="^(?=.*?[A-Z])(?=.*?[a-z])(?=.*?[0-9]).{14,128}$"
              placeholder="Confirm new password"
              required=""
              title="Password must be between 14 and 128 characters long and contain at least 1 lower case letter, 1 upper case letter and 1 digit."
              type="password"
              value=""
            />
          </div>
        </div>
        <button
          class="wrapper updatePasswordButton primary medium"
          type="submit"
        >
          Update Password
        </button>
      </form>
    </div>
  </div>
</div>
`;

exports[`<PasswordAnd2FA /> render() should render with or without change password based on if the user has or not a password 1`] = `
<div
  class="full-width"
>
  <div
    class="page-header pageHeader"
  >
    <h1
      class="d-flex align-items-center"
    >
      Change password
    </h1>
  </div>
  <div
    class="pageContainer container-fluid"
  >
    <div
      class="contentWrapper"
    >
      <div
        class="heading-subsection-semibold inputField"
      >
        Update password
      </div>
      <div
        class="body-regular inputField"
      >
        Enter your current password to confirm your identity, then the new password you would like to set instead.
      </div>
      <form
        class=""
      >
        <div
          class="inputField"
        >
          <label
            class="label label"
            for="old_password"
          >
            Current password
            <abbr
              aria-label="required"
              class="abbr"
              title="required"
            >
              *
            </abbr>
          </label>
          <div
            class="wrapper"
          >
            <input
              class="input"
              id="old_password"
              name="old_password"
              placeholder="Current password"
              required=""
              type="password"
              value=""
            />
          </div>
        </div>
        <div
          class="inputField"
        >
          <label
            class="label label"
            for="new_password"
          >
            New password
            <abbr
              aria-label="required"
              class="abbr"
              title="required"
            >
              *
            </abbr>
          </label>
          <div
            class="wrapper"
          >
            <input
              class="input"
              id="new_password"
              name="new_password"
              pattern="^(?=.*?[A-Z])(?=.*?[a-z])(?=.*?[0-9]).{14,128}$"
              placeholder="New password"
              required=""
              title="Password must be between 14 and 128 characters long and contain at least 1 lower case letter, 1 upper case letter and 1 digit."
              type="password"
              value=""
            />
          </div>
        </div>
        <div
          class="inputField"
        >
          <label
            class="label label"
            for="confirm_new_password"
          >
            Confirm new password
            <abbr
              aria-label="required"
              class="abbr"
              title="required"
            >
              *
            </abbr>
          </label>
          <div
            class="wrapper"
          >
            <input
              class="input"
              id="confirm_new_password"
              name="confirm_new_password"
              pattern="^(?=.*?[A-Z])(?=.*?[a-z])(?=.*?[0-9]).{14,128}$"
              placeholder="Confirm new password"
              required=""
              title="Password must be between 14 and 128 characters long and contain at least 1 lower case letter, 1 upper case letter and 1 digit."
              type="password"
              value=""
            />
          </div>
        </div>
        <button
          class="wrapper updatePasswordButton primary medium"
          type="submit"
        >
          Update Password
        </button>
      </form>
    </div>
  </div>
</div>
`;

exports[`<PasswordAnd2FA /> render() should render with or without change password based on if the user has or not a password 2`] = `
<div
  class="full-width"
>
  <div
    class="page-header pageHeader"
  >
    <h1
      class="d-flex align-items-center"
    >
      Change password
    </h1>
  </div>
  <div
    class="pageContainer container-fluid"
  >
    <div
      class="contentWrapper"
    />
  </div>
</div>
`;
